--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/locomotive-scroll@3.5.4/dist/locomotive-scroll.css">
-    <link rel="icon" href="assets/zarurat_logo-removebg-preview.pngadd" type="image/x-icon">
+    <link rel="icon" href="assets/zarurat logo.png" type="image/x-icon">
     <title>Zarurat</title>
 </head>
 <body>
